--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <div class="btn">
         <button>Roll Dice</button>
     </div>
+    <img src="./images/dice1.png">
+    <script src="./app.js"></script>
 </body>
 </html>
